Changes for showing specific folder.

--- a/elFinder.NetCore.Web/Views/FileManager/Index.cshtml
+++ b/elFinder.NetCore.Web/Views/FileManager/Index.cshtml
@@ -17,7 +17,8 @@
             });
             
             var options = {
-                url: '/el-finder/file-system/connector', // Default (Local File System)
+                url: '/el-finder/file-system/connector?folderPath=BackgroundImages&folderName=BackgroundImage', // Default (Local File System)
+                //customData: {folder: 'BackgroundImages'},
                 //url: '/el-finder/azure-storage/connector', // Microsoft Azure Connector
                 @*//customData: { folder: '@Model.Folder', subFolder: '@Model.SubFolder' }, // customData passed in every request to the connector as query strings. These values are used in FileController's Index method.*@
                 rememberLastDir: false, // Prevent elFinder saving in the Browser LocalStorage the last visited directory
